laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-back
  labels:
    app: blog-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-back
  template:
    metadata:
      labels:
        app: blog-back
    spec:
      containers:
      - name: blog-back
        image: khalil4/blogback:v1
      
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog-back-service
spec:
  selector:
    app: blog-back
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
